force-app/main/default/objects/Object_Config__mdt/fields/FieldSetup__c.field-meta.xml
<CustomField>
    <fullName>FieldSetup__c</fullName>
    <label>FieldSetup</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>