force-app/main/default/objects/Object_Config__mdt/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <description>The api name of the object what the Data Table will show</description>
    <label>ObjectApiName</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>