force-app/main/default/objects/Object_Config__mdt/fields/OrderBy__c.field-meta.xml
<CustomField>
    <fullName>OrderBy__c</fullName>
    <label>OrderBy</label>
    <type>TextArea</type>
</CustomField>