force-app/main/default/objects/Object_Config__mdt/fields/PageSize__c.field-meta.xml
<CustomField>
    <fullName>PageSize__c</fullName>
    <label>PageSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>