force-app/main/default/objects/Object_Config__mdt/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>Query for the Datatable</description>
    <inlineHelpText>SELECT fieldname, fieldname FROM ObjectApiName</inlineHelpText>
    <label>Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>