force-app/main/default/objects/Object_Config__mdt/fields/TabIcon__c.field-meta.xml
<CustomField>
    <fullName>TabIcon__c</fullName>
    <label>TabIcon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>