force-app/main/default/objects/Object_Config__mdt/fields/TabLabel__c.field-meta.xml
<CustomField>
    <fullName>TabLabel__c</fullName>
    <label>TabLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>