force-app/main/default/objects/Object_Config__mdt/fields/TargetField__c.field-meta.xml
<CustomField>
    <fullName>TargetField__c</fullName>
    <label>TargetField</label>
    <type>TextArea</type>
</CustomField>